2003-01-10  Duncan Mak  <duncan@ximian.com>

	* gtk/TextView.custom (WindowToBufferCoords): Remove the hack, as
	the generator produces correct code now.

	* sources/Gtk.metadata (GtkTextView): Add a patch from Fredrik
	Nilsson <jymdman@home.se> to add needed 'out' parameters.

2003-01-09  Rodrigo Moya <rodrigo@ximian.com>

	* makefile:
	* configure.in:
	* api/Makefile.in:
	* api/gphoto-api.xml:
	* sources/gtk-sharp.sources:
	* gphoto/Makefile.in:
	* gphoto/.cvsignore: removed gphoto2 bindings, to be moved to mphoto.

2003-01-06  Pedro Abelleira Seco <pedroabelleira@yahoo.es>

	* pango/Layout.custom: Add Size get property and add some nicer overloads
        to avoid explicit passing in the string length

2003-01-05  Pedro Abelleira Seco <pedroabelleira@yahoo.es>

	* gdk/Drawable.custom: Add Size get property

2003-01-05  Duncan Mak  <duncan@ximian.com>

	* pango/GlyphString.custom: Add some nicer overloads to avoid
	explicit passing in the string length.

2003-01-05  Duncan Mak  <duncan@ximian.com>

	* generator/GenBase.cs (AppendCustom): Add #region to code from
	.custom files.

	* generator/*Gen.cs: Add #region markers.

2003-01-05  Duncan Mak  <duncan@ximian.com>

	* sources/Gtk.metadata (TextIter.ForwardSearch): Add out param
	(TextIter.BackwardSearch): Add out param here too.

	* sources/Gdk.metadata (Drawable.GetSize): Add out param.

	* gtk/TextBuffer.custom (Clear): Add a new Clear method.

2003-01-02  Alp Toker <alp@atoker.com>

	* api/gst-api.xml: Give int values to the ElementState enum, remove
	incorrectly generated SetInternalConnectionFunction and a duplicated
	type field

2003-01-01  Alp Toker <alp@atoker.com>

	* glade/XML.custom: Determine name of GladeWidget if none specified
	* glade/GladeWidgetAttribute.cs: ditto

2003-01-01  Rachel Hestilow <hestilow@ximian.com>

	* glade/XML.custom: New method BindFields.
	(Autoconnect): Call BindFields.
	* glade/GladeWidgetAttribute.cs: Added.
	
	* sample/GladeTest.cs: Test GladeWidgetAttribute.
	