@@ -1,3 +1,8 @@
+2003-01-12  Martin Baulig  <martin@ximian.com>
+
+	* parser/gapi2xml.pl (addNameElem): Make this work if the $cname
+	doesn't start with $prefix.
+
 2003-01-10  Duncan Mak  <duncan@ximian.com>
 
 	* gtk/TextView.custom (WindowToBufferCoords): Remove the hack, as
